--- a/index.html
+++ b/index.html
@@ -2,6 +2,15 @@
 <html lang="en">
 
 <head>
+  <meta name="title" content="Projects JS">
+  <meta name="description"
+    content="Projects created without frameworks, using only html5, css3 and Javascript">
+  <meta name="keywords"
+    content="html5, css3, javascript, js, projects, André Rossner">
+  <meta name="robots" content="noindex, nofollow">
+  <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+  <meta name="language" content="English">
+  <meta name="author" content="André Rossner">
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
