--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Projects JS | By André Rossner</title>
+  <title>Projects Web | By André Rossner</title>
   <script src="https://kit.fontawesome.com/ab9ff4be33.js"
     crossorigin="anonymous"></script>
   <link rel="stylesheet" href="./style.css">
